@@ -28,6 +28,7 @@
 // generated by Fast Light User Interface Designer (fluid) version 1.0300
 
 #include "alignment_panel.h"
+Fl_Text_Buffer *shell_run_buffer; 
 
 Fl_Double_Window *project_window=(Fl_Double_Window *)0;
 
@@ -46,9 +47,9 @@ Fl_Check_Button *use_FL_COMMAND_button=(Fl_Check_Button *)0;
 Fl_Choice *i18n_type_chooser=(Fl_Choice *)0;
 
 Fl_Menu_Item menu_i18n_type_chooser[] = {
- {"None", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 11, 0},
- {"GNU gettext", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 11, 0},
- {"POSIX catgets", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 11, 0},
+ {"None", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 14, 0},
+ {"GNU gettext", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 14, 0},
+ {"POSIX catgets", 0,  0, 0, 0, FL_NORMAL_LABEL, 0, 14, 0},
  {0,0,0,0,0,0,0,0,0}
 };
 
@@ -61,103 +62,82 @@ Fl_Input *i18n_set_input=(Fl_Input *)0;
 Fl_Input *i18n_function_input=(Fl_Input *)0;
 
 Fl_Double_Window* make_project_window() {
-  { project_window = new Fl_Double_Window(358, 207, "Project Settings");
-    { Fl_Button* o = new Fl_Button(293, 175, 52, 20, "Close");
+  { project_window = new Fl_Double_Window(399, 252, "Project Settings");
+    { Fl_Button* o = new Fl_Button(328, 216, 60, 25, "Close");
       o->tooltip("Close this dialog.");
-      o->labelsize(11);
       o->callback((Fl_Callback*)cb_Close);
     } // Fl_Button* o
-    { Fl_Tabs* o = new Fl_Tabs(10, 10, 335, 151);
+    { Fl_Tabs* o = new Fl_Tabs(10, 10, 378, 195);
       o->selection_color((Fl_Color)12);
-      o->labelsize(11);
-      { Fl_Group* o = new Fl_Group(10, 30, 335, 131, "Output");
-        o->labelsize(11);
-        { Fl_Box* o = new Fl_Box(15, 40, 325, 15, "Use \"name.ext\" to set name or just \".ext\" to set extension.");
-          o->labelsize(11);
+      { Fl_Group* o = new Fl_Group(10, 36, 378, 169, "Output");
+        o->hide();
+        { Fl_Box* o = new Fl_Box(100, 49, 236, 49, "Use \"name.ext\" to set a file name or just \".ext\" to set extension.");
           o->align(Fl_Align(FL_ALIGN_WRAP|FL_ALIGN_INSIDE));
         } // Fl_Box* o
-        { header_file_input = new Fl_Input(96, 60, 228, 20, "Header File:");
+        { header_file_input = new Fl_Input(99, 103, 272, 20, "Header File:");
           header_file_input->tooltip("The name of the generated header file.");
           header_file_input->box(FL_THIN_DOWN_BOX);
           header_file_input->labelfont(1);
-          header_file_input->labelsize(11);
           header_file_input->textfont(4);
-          header_file_input->textsize(11);
           header_file_input->callback((Fl_Callback*)header_input_cb, (void*)(1));
           header_file_input->when(FL_WHEN_CHANGED);
         } // Fl_Input* header_file_input
-        { code_file_input = new Fl_Input(97, 85, 227, 20, "Code File:");
+        { code_file_input = new Fl_Input(100, 128, 272, 20, "Code File:");
           code_file_input->tooltip("The name of the generated code file.");
           code_file_input->box(FL_THIN_DOWN_BOX);
           code_file_input->labelfont(1);
-          code_file_input->labelsize(11);
           code_file_input->textfont(4);
-          code_file_input->textsize(11);
           code_file_input->callback((Fl_Callback*)code_input_cb, (void*)(1));
           code_file_input->when(FL_WHEN_CHANGED);
         } // Fl_Input* code_file_input
-        { include_H_from_C_button = new Fl_Check_Button(95, 110, 145, 20, "Include Header from Code");
+        { include_H_from_C_button = new Fl_Check_Button(100, 153, 272, 20, "Include Header from Code");
           include_H_from_C_button->tooltip("Include the header file from the code file.");
           include_H_from_C_button->down_box(FL_DOWN_BOX);
-          include_H_from_C_button->labelsize(11);
           include_H_from_C_button->callback((Fl_Callback*)include_H_from_C_button_cb);
         } // Fl_Check_Button* include_H_from_C_button
-        { use_FL_COMMAND_button = new Fl_Check_Button(95, 130, 245, 20, "Generate menu shortcuts using FL_COMMAND");
+        { use_FL_COMMAND_button = new Fl_Check_Button(100, 176, 272, 20, "Menu shortcuts use FL_COMMAND");
           use_FL_COMMAND_button->tooltip("Replace FL_CTRL with FL_COMMAND when generating menu shortcut code.");
           use_FL_COMMAND_button->down_box(FL_DOWN_BOX);
-          use_FL_COMMAND_button->labelsize(11);
           use_FL_COMMAND_button->callback((Fl_Callback*)use_FL_COMMAND_button_cb);
         } // Fl_Check_Button* use_FL_COMMAND_button
         o->end();
       } // Fl_Group* o
-      { Fl_Group* o = new Fl_Group(10, 30, 335, 131, "Internationalization");
-        o->labelsize(11);
-        o->hide();
-        { i18n_type_chooser = new Fl_Choice(80, 42, 100, 20, "Use:");
+      { Fl_Group* o = new Fl_Group(10, 36, 378, 169, "Internationalization");
+        { i18n_type_chooser = new Fl_Choice(100, 48, 136, 25, "Use:");
           i18n_type_chooser->tooltip("Type of internationalization to use.");
           i18n_type_chooser->box(FL_THIN_UP_BOX);
           i18n_type_chooser->down_box(FL_BORDER_BOX);
           i18n_type_chooser->labelfont(1);
-          i18n_type_chooser->labelsize(11);
-          i18n_type_chooser->textsize(11);
           i18n_type_chooser->callback((Fl_Callback*)i18n_type_cb);
           i18n_type_chooser->menu(menu_i18n_type_chooser);
         } // Fl_Choice* i18n_type_chooser
-        { i18n_include_input = new Fl_Input(80, 67, 245, 20, "#include:");
+        { i18n_include_input = new Fl_Input(100, 78, 272, 20, "#include:");
           i18n_include_input->tooltip("The include file for internationalization.");
           i18n_include_input->box(FL_THIN_DOWN_BOX);
           i18n_include_input->labelfont(1);
-          i18n_include_input->labelsize(11);
           i18n_include_input->textfont(4);
-          i18n_include_input->textsize(11);
           i18n_include_input->callback((Fl_Callback*)i18n_text_cb);
         } // Fl_Input* i18n_include_input
-        { i18n_file_input = new Fl_Input(80, 92, 245, 20, "File:");
+        { i18n_file_input = new Fl_Input(100, 104, 272, 20, "File:");
           i18n_file_input->tooltip("The name of the message catalog.");
           i18n_file_input->box(FL_THIN_DOWN_BOX);
           i18n_file_input->labelfont(1);
-          i18n_file_input->labelsize(11);
           i18n_file_input->textfont(4);
-          i18n_file_input->textsize(11);
           i18n_file_input->callback((Fl_Callback*)i18n_text_cb);
         } // Fl_Input* i18n_file_input
-        { i18n_set_input = new Fl_Input(80, 117, 245, 20, "Set:");
+        { i18n_set_input = new Fl_Input(100, 128, 272, 20, "Set:");
           i18n_set_input->tooltip("The message set number.");
           i18n_set_input->type(2);
           i18n_set_input->box(FL_THIN_DOWN_BOX);
           i18n_set_input->labelfont(1);
-          i18n_set_input->labelsize(11);
           i18n_set_input->textfont(4);
-          i18n_set_input->textsize(11);
           i18n_set_input->callback((Fl_Callback*)i18n_text_cb);
         } // Fl_Input* i18n_set_input
-        { i18n_function_input = new Fl_Input(80, 92, 245, 20, "Function:");
+        { i18n_function_input = new Fl_Input(100, 103, 272, 20, "Function:");
           i18n_function_input->tooltip("The function to call to internationalize the labels and tooltips.");
           i18n_function_input->box(FL_THIN_DOWN_BOX);
           i18n_function_input->labelfont(1);
-          i18n_function_input->labelsize(11);
           i18n_function_input->textfont(4);
-          i18n_function_input->textsize(11);
           i18n_function_input->callback((Fl_Callback*)i18n_text_cb);
         } // Fl_Input* i18n_function_input
         o->end();
@@ -169,7 +149,6 @@ Fl_Double_Window* make_project_window() {
   } // Fl_Double_Window* project_window
   return project_window;
 }
-Fl_Text_Buffer *shell_run_buffer; 
 void scheme_cb(Fl_Choice *, void *); 
 
 Fl_Double_Window *settings_window=(Fl_Double_Window *)0;
